# sdl2tutorial

./: .gitignore  CMakeLists.txt  FileUtils.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  README.md  SimpleFileUtils.cpp  SimpleFileUtils.h  TextureManager.cpp  TextureManager.h  TileMapData.h  TileMapJsonParser.h  TileMapRapidJsonParser.cpp  TileMapRapidJsonParser.h  main.cpp
cmake-modules/: FindSDL2_mixer.cmake
res/tiles/: tipo-mario-map.json  tipo-mario-tileset.json
